app/styles/tailwind.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@import url('https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:opsz,wght@12..96,200..800&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@400;500;600;700&display=swap');

@font-face {
  font-family: "BricolageGrotesque";
  src: url("../../public/fonts/BricolageGrotesque-VariableFont_wght.ttf");
}
@font-face {
  font-family: "Inter";
  src: url("../../public/fonts/Inter-VariableFont_slnt_wght.ttf");
}
@font-face {
  font-family: "Chakra Petch";
  src: url("../../public/fonts/ChakraPetch-Regular.ttf");
}

html{
  overscroll-behavior-x: none;
  overflow-x: hidden;
  width: 100%;
}

@layer base {
  /* ... */
  h1 {
    @apply text-[45px] leading-[59px] tracking-wider font-normal font-BricolageGrotesque;
    @media screen and (max-width: 1024px) {
      @apply text-[40px] leading-[59px] tracking-wider font-normal font-BricolageGrotesque;
    }
  }
  h2 {
    @apply text-[36px] leading-[36px] tracking-wider font-normal font-BricolageGrotesque;
  }

  h3 {
    @apply text-[26px] leading-[25px] tracking-wider font-normal font-BricolageGrotesque;
  }

  h4 {
    @apply text-[16px] leading-[27px] tracking-wider font-normal font-Inter;
  }

  h5 {
    @apply text-[18px] leading-[25px] tracking-wider font-normal font-BricolageGrotesque;
    @media screen and (max-width: 1024px) {
      @apply text-[15px] leading-[22px] tracking-wider font-normal font-BricolageGrotesque;
    }
  }


  h6 {
    @apply text-[16px] leading-[46px] tracking-wider font-normal font-Chakra;
  }
  p {
    @apply text-[16px] leading-[46px] tracking-wider font-normal font-Chakra;
  }

  #gabyb p {
    @apply text-[16px] leading-loose tracking-wider font-normal font-Chakra;
  }
  /* #dues li {
    @apply flex flex-row flex-1 flex-nowrap w-full items-center;
  } */


  #dues li span {
    @apply text-[13px] leading-[27px] tracking-wider font-normal font-Inter text-[#9B9B9B];
  }

  #dues p {
    @apply text-[13px] leading-[27px] tracking-wider font-normal font-Inter;
  }

  #dues li {
    @apply text-[16px] leading-[27px] tracking-wider font-normal font-Inter;
  }

  #servicesLists p{
    @apply text-[13px] leading-loose tracking-wider font-normal font-Inter;

  }

  #gabyb h5{
    @apply text-[18px] leading-[25px] tracking-wider font-light font-BricolageGrotesque;
  }

  li {
    @apply text-[13px] leading-[27px] tracking-wider font-normal font-Chakra;
  }
  #faqq{
    @apply text-[15px] leading-[27px] tracking-wider font-normal text-left font-BricolageGrotesque;
  }
  #faqa{
    @apply text-[15px] leading-[27px] tracking-wider font-normal text-left font-Inter;
  }
}

